# SynRBL

./: .coveragerc  .gitignore  CITATION.cff  Clean-1.ipynb  Example.ipynb  LICENSE  MCS_test.ipynb  README.md  USPTO_1K.csv  app.py  data.py  dataset.csv  dataset.json  dataset_100.csv  dataset_gen.py  dataset_out.csv  dataset_out_100.csv  db_interface.py  deploy.ipynb  ecoli_benchmark.csv  eval.py  gen_extended.py  lint.sh  lint_check.sh  out.txt  per_dataset_benchmark.py  pyproject.toml  requirements.txt  setup.py  synrbl.py  synrbl_pilot.py  test.ipynb  test.py  test_data.csv  tmp.py
.github/: dependabot.yml
.github/workflows/: publish-package.yml  test-and-lint.yml
Data/: Jaworski_result.csv  scoring_function.pkl
Data/Backup/: backup_source.ipynb  (+1 more)
Notebook/: 1_Example.ipynb  2_Deployment.ipynb  2_Deployment_copy.ipynb  3_MCS_Test copy.ipynb  3_MCS_Test.ipynb  3_MCS_Test.py  Deployment.ipynb  Example.ipynb  Fix_bug.ipynb  MCS_Impute.ipynb  MCS_graph_bug.ipynb  MCS_test.ipynb  check_final_validation.py  dev_test.py  figures.py  mcs_eval.py  paper_figures.py  test-08-12.ipynb  test.py  test_find_graph.py  test_merge_mcs.py  val_set_gen.py
Pipeline/: 1_extract_decompose.py  2_rules_extraction.py  3_rules_based_imputer.py  4_run_mcs.py  5_merge_mcs.py  6_find_graph.py  7_impute_on_mcs.py
Scripts/: result_evaluation.py  synrbl_pilot.py  validation_set_interface.py
SynRBL/: __init__.py  confidence_prediction.py  main.py  mcs.py  postprocess.py  preprocess.py  rsmi_comparator.py  rsmi_dataimpute.py  rsmi_decomposer.py  rsmi_processing.py  rsmi_utils.py  rule_based.py  utils.py
Test/: test_SynRBL.py  test_balancing.py  test_mcs_search.py  test_reaction_rebalancer.py
synrbl/: __init__.py  __main__.py  balancing.py  confidence_prediction.py  main.py  mcs.py  mcs_search.py  postprocess.py  preprocess.py  reaction_rebalancer.py  rsmi_utils.py  rule_based.py
(+310 files in other folders)
