[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synrbl"
version = "1.0.4"
authors = [
	{name="Tieu Long Phan", email="long.tieu_phan@uni-leipzig.de"}, 
	{name="Klaus Weinbauer", email="klaus@bioinf.uni-leipzig.de"}
	]
description = "Synthesis Rebalancing Framework for Computational Chemistry"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
    "synkit>=1.0.1",
    "xgboost>=2.0.3,<=3.0.0",
    "imbalanced_learn>=0.12.0,<0.13.0",
    "reportlab>=4.1.0",
    "fgutils>=0.1.3,<=0.2.3",
]


[project.urls]
homepage = "https://github.com/TieuLongPhan/SynRBL"
source = "https://github.com/TieuLongPhan/SynRBL"
issues = "https://github.com/TieuLongPhan/SynRBL/issues"
